--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,22 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>app</title>
+    <link rel="shortcut icon" href="favicon.ico">
+    <title>frontend</title>
+
+    <script type="text/javascript" src="3rd/js/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="3rd/js/jquery.blockUI.js"></script>
+    <script type="text/javascript" src="3rd/js/alertify.min.js"></script>
+
+    <link id="theme-css" rel="stylesheet" type="text/css" href="3rd/css/loader.css">
+    <link id="theme-css" rel="stylesheet" type="text/css" href="3rd/css/loading.css">
+    <link id="theme-css" rel="stylesheet" type="text/css" href="3rd/css/alertify.min.css">
+    <link id="theme-css" rel="stylesheet" type="text/css" href="3rd/css/alertify-theme/default.min.css">
+
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but app doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but frontend doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
